Fix layout issues
used visibility instead of display so that the hidden elements
keep their space in the layout and prevent sudden shifts to other
elements positions

--- a/style.css
+++ b/style.css
@@ -40,13 +40,14 @@ html {
     margin-block: 30px;
 }
 #play-again {
+    visibility: hidden;
     font-size: 1.2rem;
     cursor: pointer;
     display: block;
     margin: 0 auto;
-    display: none;
 }
 #winner {
+    visibility: hidden;
     text-align: center;
     font-size: 1.4rem;
     margin-bottom: 30px;
